--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,33 +1,315 @@
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  padding: 0;
-  padding-right: 0 !important;
-  font-family: "Roboto", sans-serif;
-  font-size: 1.2rem;
-  font-weight: 500;
+  overflow-x: hidden; /* Hide scrollbars */
+  font-family: DM sans;
+}
+
+/* roote colors */
+:root {
+  --dj-red: #e42626;
+  --dj-blue: #0b1c35;
+}
+
+.site-container {
+  min-height: 100vh;
+  transition: 0.4s;
+}
+pre,
+code {
+  width: 80%;
+  white-space: pre-line;
+  font-family: "DM Sans";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.text {
+  width: 80%;
+}
+.header_container {
+  background-color: #d9d9d9;
+  height: 6em;
+}
+.header_img {
+  width: 103px;
+  height: 96px;
+}
+.videoWrapper {
+  position: relative;
+  padding-bottom: 20.25%;
+  height: 0;
+}
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.header_text {
   color: black;
-}
-
-html {
-  overflow-y: scroll;
-}
-h1,
-h2,
-h3,
-h4 {
-  font-family: "Roboto", sans-serif;
-}
-
-p {
-  font-weight: 200;
-}
-
-strong {
   font-weight: bold;
+  font-size: 3rem;
+}
+.less {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+
+main {
+  flex: 1;
+}
+
+footer {
+  margin-top: 20px;
+  background-color: black;
+  color: white;
+}
+/* Nav and offcanvas */
+.navbar-custom {
+  background-color: #d9d9d9;
+}
+
+.navbar-custom-light {
+  background-color: #262626;
+  opacity: 0.8;
+}
+
+.navbar-custom-light-brand {
+  color: #000;
+}
+
+/* Sidebar */
+.navbar-brand {
+  font-weight: bold;
+}
+
+.side-navbar {
+  flex: 1;
+  flex-direction: row;
+  width: 240px;
+  height: 100%;
+  position: absolute;
+  right: -300px;
+  background-color: var(--dj-blue);
+  transition: 0.5s;
+}
+
+.active-cont {
+  margin-left: 240px;
+}
+
+.active-nav {
+  left: 0;
+}
+
+.text-bold {
+  font-weight: bold;
+}
+
+.nav-text {
+  color: white;
+  padding: 10px;
+}
+.nav-text-bold {
+  font-weight: bold;
+  color: white;
+}
+
+.nav-text:hover {
+  background-color: rgb(52, 51, 51);
+  color: white;
+}
+
+.navTitle {
+  color: #fff;
+}
+
+.navTitle-dark {
+  color: 000;
+}
+
+.cap-heading {
+  font-family: "Bebas Neue";
+  font-weight: 400;
+  font-size: 60;
+  text-transform: uppercase;
+}
+
+.home-sub-heading {
+  font-family: "Bebas Neue";
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 67.2px;
+  text-transform: uppercase;
+}
+
+.section-heading {
+  font-family: "DM Sans";
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 34px;
+}
+
+.section-text {
+  font-family: "DM Sans";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.section-sub-text {
+  font-family: "DM Sans";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+}
+
+.home-section-text a {
+  color: var(--dj-red);
+}
+
+.class-image {
+  max-width: 100%;
+  height: auto;
+}
+
+/* Body text */
+.body-small {
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.sub-title {
+  font-weight: 700;
+}
+
+.try-a-class {
+  background-color: var(--dj-red);
+}
+
+.free-class-heading {
+  color: white;
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 62.7px;
+}
+
+.home-about,
+.senseis {
+  background-color: black;
+  padding-left: 1px;
+}
+
+.home-about-img {
+  width: 321px;
+  height: 373px;
+}
+
+.faqs .faq {
+  width: 100%;
+  max-width: 768px;
+  margin: 0 auto;
+  padding: 15;
+}
+
+.faqs .faq {
+  margin: 15px;
+  padding: 15px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.faqs .faq .faq-question {
+  position: relative;
+  font-size: 20px;
+  padding-right: 80px;
+  transition: all 0.4s ease;
+}
+
+.faqs .faq .faq-question::after {
+  cursor: pointer;
+  content: "";
+  position: absolute;
+  top: 10%;
+  right: 0;
+  transform: translate(-50%);
+  width: 30px;
+  height: 30px;
+  background-image: url("../public/assets/img/angle-down-solid.svg");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+
+  transition: all 0.4s ease-out;
+}
+
+.faqs .faq .faq-answer {
+  opacity: 0;
+  max-height: 0;
+  overflow-y: hidden;
+  transition: all 0.4s ease-out;
+}
+
+.faqs .faq.open .faq-question {
+  margin-bottom: 15px;
+}
+
+.faqs .faq.open .faq-question::after {
+  transform: translateX(-50%) rotate(180deg);
+}
+
+.faqs .faq.open .faq-answer {
+  max-height: 1000px;
+  opacity: 1;
+}
+
+.map-container {
+  width: 100%;
+  height: 100%;
+}
+
+.readMoreBtn {
+  background-color: black;
+  color: var(--dj-red);
+}
+
+.spinner {
+  width: 80px;
+  height: 80px;
+  margin: auto;
+  display: block;
+  color: var(--dj-red);
+}
+
+.spinner-text {
+  color: var(--dj-red);
+}
+
+.updateBtn {
+  background-color: var(--dj-red);
+}
+
+.updateBtn:hover {
+  background-color: var(--dj-blue);
+}
+
+@media screen and (max-width: 400px) {
+  .home-heading {
+    font-size: 40;
+    line-height: 52px;
+    text-transform: uppercase;
+  }
 }
