Delete faq routes, models, controllers, and slice

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -255,6 +255,9 @@ footer {
 
   transition: all 0.4s ease-out;
 }
+.faqs .faq .faq-question:hover {
+  cursor: pointer;
+}
 
 .faqs .faq .faq-answer {
   opacity: 0;
