--- a/client/src/index.css
+++ b/client/src/index.css
@@ -425,3 +425,114 @@ footer {
   font-weight: bold;
   cursor: pointer;
 }
+
+/*-----Form START-----*/
+
+.form_container {
+  background-color: var(--bs-light-gray);
+}
+
+.required {
+  color: var(--bs-red);
+}
+label {
+  color: var(--bs-blue);
+  font-size: 20px;
+  font-weight: bold;
+}
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="date"],
+select,
+.quill-editor {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  font-size: 20px;
+  box-sizing: border-box;
+  background-color: white;
+  border-radius: 4px;
+}
+
+input:focus {
+  border-width: 3px;
+}
+input::placeholder {
+  color: var(--bs-blue);
+}
+
+input.input-error,
+input.passError,
+select.input-error {
+  border: 2px solid var(--bs-dark-red);
+}
+
+.passErrorText {
+  font-size: 14px;
+  color: var(--bs-dark-red);
+}
+textarea {
+  height: 150px;
+  width: 100%;
+  background-color: #fff;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: "flex";
+  justify-content: "center";
+  font-size: 20px;
+  box-sizing: border-box;
+  background-color: var(--bs-light-gray);
+  border-radius: 4px;
+}
+textarea::placeholder {
+  color: var(--bs-blue);
+}
+textarea:focus {
+  border-width: 3px;
+}
+input[type="radio"],
+input[type="checkbox"] {
+  margin: 0;
+  appearance: none;
+  background-color: #fff;
+  margin: 0;
+  font: inherit;
+  color: currentColor;
+  width: 1.15em;
+  height: 1.15em;
+  border: 0.15em solid currentColor;
+  border-radius: 50%;
+  transform: translateY(-0.075em);
+  display: grid;
+  place-content: center;
+}
+
+input[type="radio"]::before,
+input[type="checkbox"]::before {
+  content: "";
+  width: 0.65em;
+  height: 0.65em;
+  border-radius: 50%;
+  transform: scale(0);
+  transition: 120ms transform ease-in-out;
+  box-shadow: inset 1em 1em var(--form-control-color);
+  background-color: var(--blue);
+}
+
+input[type="radio"]:checked::before,
+input[type="checkbox"]:checked::before {
+  transform: scale(1);
+}
+
+input[type="radio"]:focus,
+input[type="checkbox"]:focus {
+  outline: max(2px, 0.15em) solid currentColor;
+  outline-offset: max(2px, 0.15em);
+}
+
+.form-desc {
+  font-size: 14px;
+  font-weight: bold;
+}
+/*-----Form END-----*/
